# cmake_conan_template

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt
cmake/: prepare_conan.cmake
lib/: CMakeLists.txt  util.cpp  util.h
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  test_util.cpp
